# its-time-to-build-game

./: .mcp.json  README.md  buildings_manifest.json
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: main.ts  main.tsx
docs/plans/: 2026-02-28-agent-system-design.md  2026-02-28-agent-system-plan.md  2026-02-28-agent-wander-design.md  2026-02-28-agent-wander-plan.md  2026-02-28-architecture-design.md  2026-02-28-bound-agents-design.md  2026-02-28-bound-agents-plan.md  2026-02-28-building-architecture-design.md  2026-02-28-building-architecture-plan.md  2026-02-28-building-browser-design.md  2026-02-28-building-browser-plan.md  2026-02-28-combat-system-design.md  2026-02-28-combat-system-plan.md  2026-02-28-crafting-blueprints-design.md  2026-02-28-crafting-blueprints-plan.md  2026-02-28-expanded-map-interactions-design.md  (+15 more)
server/: Cargo.toml
server/src/: lib.rs  main.rs  protocol.rs
server/src/ai/: mod.rs  rogue_ai.rs
server/src/ecs/: components.rs  mod.rs  weapon_stats.rs  world.rs
server/src/ecs/systems/: agent_tick.rs  agent_wander.rs  building.rs  camp_spawner.rs  combat.rs  crank.rs  economy.rs  mod.rs  placement.rs  projectile.rs  spawn.rs
server/src/game/: agents.rs  building.rs  collision.rs  exploration.rs  fog.rs  mod.rs  progression.rs  tilemap.rs  upgrades.rs
server/src/grading/: mod.rs  rubrics.rs
server/src/network/: http_api.rs  mod.rs  server.rs
server/src/project/: manifest.rs  mod.rs  process.rs  scaffold.rs
server/src/vibe/: agents.rs  manager.rs  mod.rs  session.rs
(+42 files in other folders)
