[package]
name = "its-time-to-build-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hecs = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noise = "0.9"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
portable-pty = "0.8"
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dirs = "5"
